--- a/templates/base.html
+++ b/templates/base.html
@@ -56,33 +56,17 @@
       <div class="row">
 
         <div class="col-sm-8 blog-main">
-          {% for post in postingan %}
-          <div class="blog-post">
-            <h2 class="blog-post-title"><a href="/article/{{post.slug}}">{{post.title|safe}}</a></h2>
-            <p class="blog-post-meta">{{post.created_on|date:"l, d F Y, H:i" }}. Category <a href="#">{{post.category}}</a></p>
-
-            {{post.content|safe}}
-          </div><!-- /.blog-post -->
-          {% endfor %}
-
-          {% for cat in categories %}
-          {{cat}}
-          {% endfor %}
-
-          <nav>
-            <ul class="pager">
-              <li><a href="#">Previous</a></li>
-              <li><a href="#">Next</a></li>
-            </ul>
-          </nav>
-
+          {% block content %}
+          {% endblock %}
         </div><!-- /.blog-main -->
 
         <div class="col-sm-3 col-sm-offset-1 blog-sidebar">
+          {% block about %}
           <div class="sidebar-module sidebar-module-inset">
             <h4>About {{nama}}</h4>
             <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
           </div>
+          {% endblock %}
           <div class="sidebar-module">
             <h4>Category</h4>
             <ol class="list-unstyled">
