--- a/templates/base.html
+++ b/templates/base.html
@@ -36,12 +36,17 @@
     <div class="blog-masthead">
       <div class="container">
         <nav class="blog-nav">
-          <a class="blog-nav-item active" href="#">Home</a>
+          <a class="blog-nav-item active" href="/">Home</a>
           <a class="blog-nav-item" href="#">New features</a>
           <a class="blog-nav-item" href="#">Press</a>
           <a class="blog-nav-item" href="#">New hires</a>
           <a class="blog-nav-item" href="#">About</a>
           <a class="blog-nav-item" href="#">Category</a>
+          {% if request.user.is_authenticated %}
+          <a class="blog-nav-item" href="/logout">Logout</a>
+          {% else %}
+          <a class="blog-nav-item" href="/login">Login</a>
+          {% endif %}
         </nav>
       </div>
     </div>
@@ -62,10 +67,12 @@
 
         <div class="col-sm-3 col-sm-offset-1 blog-sidebar">
           {% block about %}
-          <div class="sidebar-module sidebar-module-inset">
-            <h4>About {{nama}}</h4>
-            <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
-          </div>
+            {% if request.user.is_authenticated %}
+              <div class="sidebar-module sidebar-module-inset">
+                <h4>About {{request.user}}</h4>
+                <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
+              </div>
+            {% endif %}
           {% endblock %}
           <div class="sidebar-module">
             <h4>Category</h4>
@@ -105,5 +112,9 @@
     <script src="static/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="static/js/ie10-viewport-bug-workaround.js"></script>
+
+    {% block extraJS %}
+    {% endblock %}
+
   </body>
 </html>
